Created attachment 105217 [details] Original file Steps to reproduce : 1] Open attached DOCX in LibreOffice 2] Perform save_as DOCX 3] Open saved file in MS Office 2010 Current behavior : File gets corrupt. Expected behavior : File should open in MS office 2010 without any error. Operating System: Ubuntu Version: 4.4.0.0.alpha0+ Master
Rohit Deshmukh committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=96dc17221c286dd02772f1dd54b4ffc3c3091b9a fdo#83044:Fix for corruption of file with SDT content. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Fix applied + Unit test -> RESOLVED FIXED