fdo#83044:Fix for corruption of file with SDT content.

Issue:
  w:text has a wrong child w:docPartGallery and w:docPartUnique.

Change-Id: If1dd6ff15cbba2868c93795051a5328a074721d0